cmake_minimum_required(VERSION 3.17)
project(filler)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(ft_printf)
include_directories(get_next_line)
include_directories(libft)

add_executable(filler
        ft_printf/srcs/cut_str.c
        ft_printf/srcs/fs_c.c
        ft_printf/srcs/fs_di.c
        ft_printf/srcs/fs_f.c
        ft_printf/srcs/fs_f_print.c
        ft_printf/srcs/fs_f_round.c
        ft_printf/srcs/fs_oux.c
        ft_printf/srcs/fs_p.c
        ft_printf/srcs/fs_s.c
        ft_printf/srcs/ft_flags.c
        ft_printf/srcs/ft_length_modifier.c
        ft_printf/srcs/ft_printf.c
        ft_printf/srcs/ft_wp.c
        ft_printf/srcs/parse_fs.c
        ft_printf/srcs/pdioux_create.c
        ft_printf/srcs/pdioux_enlarge.c
        ft_printf/srcs/pdioux_main.c
        ft_printf/srcs/uniform_functions.c
        ft_printf/ft_printf.h
        get_next_line/get_next_line.c
        get_next_line/get_next_line.h
        libft/ft_atoi.c
        libft/ft_atoi_dot.c
        libft/ft_bzero.c
        libft/ft_concentate_strings.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_itoa.c
        libft/ft_itoa_base.c
        libft/ft_ll_itoa.c
        libft/ft_ll_itoa_base.c
        libft/ft_ll_uitoa.c
        libft/ft_ll_uitoa_base.c
        libft/ft_lstadd.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putchar_len.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putnstr.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_putstr_len.c
        libft/ft_str_find_num.c
        libft/ft_str_is_lowercase.c
        libft/ft_str_is_numeric.c
        libft/ft_str_is_printable.c
        libft/ft_str_is_uppercase.c
        libft/ft_str_n_chr.c
        libft/ft_str_next_chr.c
        libft/ft_strcapitalize.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strjoin_free.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strlowcase.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strnchr.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strrev.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_strupcase.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/ft_uitoa.c
        libft/ft_uitoa_base.c
        libft/libft.h
        resources/maps/map00
        resources/maps/map01
        resources/maps/map02
        resources/players/abanlin.filler
        resources/players/carli.filler
        resources/players/champely.filler
        resources/players/grati.filler
        resources/players/hcao.filler
        resources/players/superjeannot.filler
        resources/col
        resources/coords
        resources/filler.trace
        resources/filler_vm
        resources/row
        resources/table
        resources/tetros
        resources/text
        author
        create_table.c
        fill.c
        filler.h
        get.c
        main.c
        Makefile
        tetros.c cut.c algos.c algorithm.c libft/ft_delete_double_array.c)
